--- a/TankGame/Assets/StreamingAssets/Localization/EN.json
+++ b/TankGame/Assets/StreamingAssets/Localization/EN.json
@@ -1,1 +1,1 @@
-﻿{"_keys":["save","load","test","start","health","player","enemy","lost"],"_values":["Save","Load","Testing","Start","{0} health: {1}","Player","Enemy","You died and lost."],"_langCode":1}
+﻿{"_keys":["save","load","test","start","health","player","enemy"],"_values":["Save","Load","Testing","Start","{0} health: {1}","Player","Enemy"],"_langCode":1}
